<resources>
    <string name="app_name">ShopCatalog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_menu_item">Cart menu item</string>
    <string name="catalog_menu_item">Catalog menu item</string>
    <string name="profile_menu_item">Profile menu item</string>
    <string name="create_account_title">Создайте аккаунт</string>
    <string name="profile_name_edittext_hint">Придумате имя профиля</string>
    <string name="register_email_edittext_hint">Введите почту</string>
    <string name="register_password_edittext_hint">Введите пароль</string>
    <string name="btn_create_acc_text">Создать аккаунт</string>
    <string name="to_login_link_text">Уже есть аккаунт?</string>
    <string name="login_title">Войти в аккаунт</string>
    <string name="login_welcome_text">Добро пожаловать!\nЧтобы войти в аккаунт, введите\nemail и пароль</string>
    <string name="login_email_edittext_hint">Введите почту</string>
    <string name="login_password_edittext_hint">Введите пароль</string>
    <string name="forget_pass_edittext_link_text">Забыл пароль</string>
    <string name="btn_login_text">Войти</string>
    <string name="btn_change_gender_text">Указать пол</string>
    <string name="btn_change_phone_number_txt">Изменить номер телефона</string>
    <string name="btn_change_avatar_text">Изменить аватар</string>
    <string name="btn_logout_text">Выйти из аккаунта</string>
    <string name="radio_btn_male">Мужской</string>
    <string name="radio_btn_female">Женский</string>
    <string name="empty_catalog_title_text">Корзина пуста</string>
    <string name="empty_catalog_description_text">Перейдите в каталог</string>
    <string name="btn_to_catalog_text">Каталог</string>
    <string name="to_register_link_text">Нет аккаунта?</string>
</resources>