<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">
    
    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@color/title_text"
        android:textSize="@dimen/title_text_size"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintBottom_toTopOf="@+id/tvLoginInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome_text"
        android:fontFamily="@font/inter"
        android:textSize="@dimen/info_text_size"
        android:textColor="@color/info_text_color"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/registerGroup"/>

    <LinearLayout
        android:id="@+id/registerGroup"
        android:layout_width="@dimen/register_group_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginInfo"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin">

        <EditText
            android:id="@+id/tvEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_edit_text_height"
            android:background="@drawable/base_edit_text_modif"
            android:hint="@string/login_email_edittext_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/auth_groups_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/auth_group_edittext_text_size" />

        <EditText
            android:id="@+id/tvPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_edit_text_height"
            android:layout_marginTop="@dimen/auth_group_margin_top"
            android:background="@drawable/base_edit_text_modif"
            android:hint="@string/login_password_edittext_hint"
            android:inputType="textPassword"
            android:paddingStart="@dimen/auth_groups_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/auth_group_edittext_text_size" />

        <TextView
            android:id="@+id/tvForgetPassLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/auth_group_margin_top"
            android:fontFamily="@font/inter"
            android:text="@string/forget_pass_edittext_link_text"
            android:textColor="@color/black"
            android:textSize="@dimen/info_text_size" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/auth_btn_width"
        android:layout_height="@dimen/auth_btn_height"
        android:layout_weight="1"
        android:text="@string/btn_login_text"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/btn_text_color"
        android:textSize="@dimen/btn_text_size"
        android:textAllCaps="false"
        android:background="@drawable/buttons_modif"
        app:layout_constraintTop_toBottomOf="@+id/registerGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvRegisterLink"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:fontFamily="@font/inter"
        android:text="@string/to_login_link_text"
        android:textAlignment="center"
        android:textColor="@color/link_text_color"
        android:textSize="@dimen/information_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>