<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartFragment">

    <LinearLayout
        android:id="@+id/emptyCatalogContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEmptyCatalogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/empty_catalog_title_text"
            android:textSize="@dimen/empty_catalog_title_text_size" />

        <TextView
            android:id="@+id/tvEmptyCatalogDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/empty_catalog_description_text" />

        <Button
            android:id="@+id/btnToCatalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_to_catalog_margin_yop"
            android:background="@drawable/buttons_modif"
            android:text="@string/btn_to_catalog_text" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwCartList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/cart_list_item"/>

</FrameLayout>